
Version (SVN)
-------------

JDO:   Resolved issue CASTOR-1435 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Refactored internal handling of identities.
       Details: http://jira.codehaus.org/browse/CASTOR-1435
       (Ralf - 20060617)

XML:   Fixed bug CASTOR-1449 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Re-generated class files from jdo-conf.xsd.
       Details: http://jira.codehaus.org/browse/CASTOR-1449
       (Werner - 20060616)

XML:   Fixed bug CASTOR-480 using contribution from Michal Stochmialek [michal.stochmialek@eurobank.pl]
       Avoid generation of unnecessary import statements in generated source.
       Details: http://jira.codehaus.org/browse/CASTOR-480
       (Werner - 20060614)

JDO:   Fixed bug CASTOR-1434 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Improve test coverage for 'auto-store' attribute.
       Details: http://jira.codehaus.org/browse/CASTOR-1434
       (Werner - 20060614)

Version 1.0.1, Jun 8, 2006
-------------------------------

JDO:   Fixed bug CASTOR-1172 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added support for ANSI-92 compliance to SQLServer persistence classes.
       Details: http://jira.codehaus.org/browse/CASTOR-1172
       (Werner - 20060608)

JDO:   Fixed bug CASTOR-1436 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added cache implementation for Gigaspaces (cache-based).
       Details: http://jira.codehaus.org/browse/CASTOR-1436
       (Werner - 20060608)

All:   Fixed bug CASTOR-1444 using contribution from Martin Fuchs [martin-fuchs@gmx.net]
       Fixed documentation of OQL OFFSET clause usage.
       Details: http://jira.codehaus.org/browse/CASTOR-1444
       (Martin - 2006006)

All:   Resolved issue CASTOR-1443 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Fixed various compiler warnings mainly in tc7x and tc20x tests of CTF.