@@ -2,6 +2,11 @@
 Version (SVN)
 -------------
 
+JDO:   Fixed bug CASTOR-1450 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
+       Add getCurrentTransaction() to AbstractDatabaseImpl.
+       Details: http://jira.codehaus.org/browse/CASTOR-1450
+       (Werner - 20060620)
+
 JDO:   Resolved issue CASTOR-1435 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
        Refactored internal handling of identities.
        Details: http://jira.codehaus.org/browse/CASTOR-1435
